[package]
name = "deadpool_bolt_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bolt-client = "0.10.1"
deadpool = "0.9.2"
deadpool-bolt = "0.1.0"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
